--- a/applications/dashboard/scss/_footer.scss
+++ b/applications/dashboard/scss/_footer.scss
@@ -3,8 +3,8 @@
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
-  padding-left: $padding-default;
-  padding-right: $padding-default;
+  padding-left: $padding-row;
+  padding-right: $padding-row;
   border-top: 1px solid $border-color;
   color: $black;
   background-color: $body-bg;
