--- a/applications/dashboard/scss/_toasters.scss
+++ b/applications/dashboard/scss/_toasters.scss
@@ -1,3 +1,8 @@
+// Toasters
+//
+// Toasters.
+//
+// Styleguide 13.
 
 // Note: InformMessages are "growl" style messages that appear in a fixed position on the page to notify users of things like drafts being saved, etc.
 
