--- a/applications/dashboard/scss/_analytics.scss
+++ b/applications/dashboard/scss/_analytics.scss
@@ -1,5 +1,20 @@
+
+// Vanilla Stats
+.toolbar-stats {
+  > *:not(.nav-stats) {
+    margin-top: $spacer * 2;
+  }
+}
+
+.toolbar > .nav-stats {
+  margin-right: 0;
+  flex-shrink: 1;
+}
+
+
+// Analytics
 .analytics-panel {
-  @extend .list-reset;
+  @include list-reset;
 }
 
 .analytics-widget {
@@ -56,7 +71,6 @@
   }
 }
 
-// TODO: Reinstate this
 .analytics-widget-move {
   margin-left: 10px;
   cursor: move;
