--- a/applications/dashboard/scss/_buttons.scss
+++ b/applications/dashboard/scss/_buttons.scss
@@ -4,10 +4,18 @@
 //
 // Styleguide 4.
 
+// Buttons
 //
-// Base styles
+// Here are the main button styles.
 //
-
+// .btn-primary - A button that causes a state change or performs a action
+// .btn-secondary - A button for secondary operations, like filtering, clearing or cancelling
+// .btn-link - A button that looks like a link but has the same margins as a button
+//
+// Markup:
+// <div class="btn {{modifier_class}}">Button</div>
+//
+// Styleguide 4.1.
 
 .btn {
   display: inline-block;
@@ -26,13 +34,13 @@
     text-decoration: none;
   }
 
-  //@include hover-focus {
-  //  text-decoration: none;
-  //}
-  //
-  //&.focus {
-  //  text-decoration: none;
-  //}
+  @include hover-focus {
+    text-decoration: none;
+  }
+
+  &.focus {
+    text-decoration: none;
+  }
 
   &:active,
   &.active {
@@ -72,27 +80,15 @@ fieldset[disabled] a.btn {
   cursor: not-allowed;
 }
 
-//
-// Alternate buttons
-//
-
 .btn-primary {
   min-width: $btn-min-width;
   @include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border, $btn-primary-bg, $btn-primary-color, $btn-primary-color);
 }
 
 .btn-secondary {
+  min-width: $btn-min-width;
   @include button-variant($btn-secondary-color, $btn-secondary-bg, $btn-secondary-border, $btn-primary-bg, $btn-primary-color, $btn-primary-color, $btn-secondary-color, lighten($brand-primary, 50%), $btn-secondary-border);
 }
-
-// Remove all backgrounds
-.btn-primary-outline {
-  @include button-outline-variant($btn-primary-bg);
-}
-
-//
-// Link buttons
-//
 
 // Make a button look and behave like a link
 .btn-link {
@@ -132,43 +128,21 @@ fieldset[disabled] a.btn {
   }
 }
 
-
+// Icon buttons
 //
-// Button Sizes
+// Icons buttons.
 //
-
-.btn-lg {
-  // line-height: ensure even-numbered height of button next to large input
-  @include button-size($btn-padding-y-lg, $btn-padding-x-lg, $font-size-lg, $line-height-lg, $btn-border-radius-lg);
-}
-
-.btn-sm {
-  // line-height: ensure proper height of button next to small input
-  @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $font-size-sm, $line-height-sm, $btn-border-radius-sm);
-}
-
-
+// .btn-icon - An icon button
+// .btn-icon-border - An icon button with a border
 //
-// Block button
+// Markup:
+// <div class="btn {{modifier_class}}">
+//   <svg class="icon icon-svg icon-svg-checkmark" viewBox="0 0 17 17">
+//     <use xlink:href="#checkmark" />
+//   </svg>
+// </div>
 //
-
-.btn-block {
-  display: block;
-  width: 100%;
-
-  + .btn-block {
-    margin-top: $spacer / 4;
-  }
-}
-
-// Specificity overrides
-input[type="submit"],
-input[type="reset"],
-input[type="button"] {
-  &.btn-block {
-    width: 100%;
-  }
-}
+// Styleguide 4.2.
 
 .btn-icon {
   @extend .btn-link;
@@ -198,11 +172,11 @@ input[type="button"] {
   }
 }
 
-// Icon buttons
 
 .btn-icon-border {
   @include button-variant($btn-secondary-color, $btn-secondary-bg, $btn-secondary-border, $btn-secondary-color, lighten($brand-primary, 50%), $btn-secondary-border);
   @extend .icon;
+
   $btn-icon-height: 28;
   $btn-icon-padding-v: (to-rem($control-height) - to-rem($btn-icon-height) - ($border-width * 2)) / 2;
   padding: $btn-icon-padding-v $btn-icon-padding-v * 2;
@@ -218,10 +192,34 @@ input[type="button"] {
 }
 
 
-// Button group
+// Button Group
+//
+// A button group.
+//
+// Markup:
+// <div class="btn-group">
+//   <div class="btn btn-secondary active">Button 1</div>
+//   <div class="btn btn-secondary">Button 2</div>
+//   <div class="btn btn-secondary">Button 3</div>
+// </div>
+//
+// Styleguide 4.3.
 
 .btn-group {
   font-size: 0;
+  position: relative;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+
+  > .btn {
+    // Bring the "active" button to the front
+    &:focus,
+    &:active,
+    &.active {
+      z-index: 2;
+    }
+  }
 
   .btn {
     border-radius: 0;
@@ -238,38 +236,68 @@ input[type="button"] {
     }
   }
 
-  .btn-secondary {
-    min-width: to-rem(96);
-  }
-}
 
-// Make the div behave like a button
-.btn-group,
-.btn-group-vertical {
-  position: relative;
-  display: flex;
-  flex-wrap: nowrap;
-  vertical-align: middle;
-
-  > .btn {
-    // Bring the "active" button to the front
-    &:focus,
-    &:active,
-    &.active {
-      z-index: 2;
-    }
-    //@include hover {
-    //  z-index: 2;
-    //}
-  }
-}
-
-// Prevent double borders when buttons are next to each other
-.btn-group {
+  // Prevent double borders when buttons are next to each other
   .btn + .btn,
   .btn + .btn-group,
   .btn-group + .btn,
   .btn-group + .btn-group {
     margin-left: -$input-btn-border-width;
   }
+}
+
+// Small Rounded Buttons
+//
+// Navbar and card buttons.
+//
+// Styleguide 4.4.
+
+@mixin button-sm-rounded {
+  display: inline-block;
+  vertical-align: middle;
+  font-weight: 300;
+  text-transform: uppercase;
+
+  svg {
+    margin-top: - to-rem(2);
+  }
+
+  @include button-size($btn-padding-y-sm, $btn-padding-x-sm, to-rem(10), to-rem(14), $btn-border-radius-navbar);
+}
+
+// Small Rounded Button
+//
+// Markup:
+// <div class="btn btn-sm-rounded">
+//   Check it out
+//   <svg class="icon icon-svg icon-svg-external-link icon-12 icon-text" viewBox="0 0 17 17">
+//     <use xlink:href="#external-link" />
+//   </svg>
+// </div>
+//
+// Styleguide 4.4.1.
+
+.btn-sm-rounded {
+  @include button-sm-rounded();
+  @include button-variant($btn-secondary-color, $btn-secondary-bg, $btn-secondary-border, $btn-primary-bg, $btn-primary-color, $btn-primary-color, $btn-secondary-color, lighten($brand-primary, 50%), $btn-secondary-border);
+}
+
+// Navbar button
+//
+// Markup:
+// <div class="btn btn-navbar">
+//   Check it out
+//   <svg class="icon icon-svg icon-svg-external-link icon-12" viewBox="0 0 17 17">
+//     <use xlink:href="#external-link" />
+//   </svg>
+// </div>
+//
+// Styleguide 4.4.2.
+
+.btn-navbar {
+  @include button-sm-rounded();
+  svg {
+    fill: $white;
+  }
+  @include button-variant($navbar-link-color, $brand-primary, $navbar-link-color, $navbar-link-color, $navbar-active-link-active-bg, $navbar-link-color);
 }
