--- a/applications/dashboard/scss/_scaffold.scss
+++ b/applications/dashboard/scss/_scaffold.scss
@@ -9,39 +9,41 @@
   order: 2;
 
   position: relative;
-  padding-left: $padding-default;
-  padding-right: $padding-default;
+  padding-left: $padding-row;
+  padding-right: $padding-row;
   max-width: 1024px;
   flex-grow: 1;
   overflow-y: hidden; // Setting overflow property stops content from widening into the panels.
 
-  // Ensure the footer is flush with the bottom of the window if the
-  // page height is less than the window height.
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  margin-top: -$navbar-height;
-  padding-top: $navbar-height;
+  .main-row & {
+    // Ensure the footer is flush with the bottom of the window if the
+    // page height is less than the window height.
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin-top: -$navbar-height;
+    padding-top: $navbar-height;
 
-  background-color: $white;
-  border: 1px solid $border-color;
-  border-top: 0;
-  border-bottom: 0;
-  transition: all 250ms;
+    background-color: $white;
+    border: 1px solid $border-color;
+    border-top: 0;
+    border-bottom: 0;
+    transition: all 250ms;
 
-  .drawer-show & {
-    transform: translate3d($drawer-width, 0, 0);
+    .drawer-show & {
+      transform: translate3d($drawer-width, 0, 0);
 
-    &:after {
-      position: absolute;
-      display: block;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      background-color: rgba(0,0,0,.25);
-      z-index: 3;
-      content: '';
+      &:after {
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: rgba(0,0,0,.25);
+        z-index: 3;
+        content: '';
+      }
     }
   }
 
